envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: google_reverse
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_google
          route_config:
            name: google_route
            virtual_hosts:
            - name: google_hosts
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { host_rewrite: www.google.com, cluster: google_service }
          http_filters:
          - name: envoy.router
  - name: httpbin_local_reverse
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10800
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_httpbin_local
          route_config:
            name: httpbin_local_route
            virtual_hosts:
            - name: httpbin_local_backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: httpbin_local }
          http_filters:
          - name: envoy.router
  - name: grpc_reverse
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 50051
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_grpc
          codec_type: auto
          route_config:
            name: grpc_route
            virtual_hosts:
            - name: grpc_backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: grpc_service }
          http_filters:
          - name: envoy.router
  - name: mysql_proxy
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3307
    filter_chains:
    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ingress_mysql
          cluster: mysql_server
  clusters:
  - name: google_service
    connect_timeout: 1.25s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
    - socket_address:
        address: www.google.com
        port_value: 443
    tls_context: { sni: www.google.com }
  - name: httpbin_local
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: httpbin
        port_value: 80
  - name: grpc_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: { }
    health_checks:
    - timeout: 3s
      interval: 30s
      interval_jitter: 1s
      unhealthy_threshold: 3
      healthy_threshold: 3
      grpc_health_check: { service_name: Health }
    hosts:
    - socket_address:
        address: grpc-demo
        port_value: 50051
  - name: mysql_server
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: mysql
        port_value: 3306
